src/acl/snapshots/portail__acl__parser__tests__policy_with_action.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "allow_web",
                attributes: [
                    Require(
                        And(
                            Comparison(
                                Identifier(
                                    "role",
                                ),
                                Eq,
                                String(
                                    "admin",
                                ),
                            ),
                            Not(
                                Comparison(
                                    Identifier(
                                        "banned",
                                    ),
                                    Eq,
                                    Boolean(
                                        true,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Action(
                        Allow,
                    ),
                ],
            },
        ),
    ],
}
