src/acl/snapshots/portail__acl__parser__tests__policy_with_dotted_identifiers.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "allow_web",
                attributes: [
                    Require(
                        Comparison(
                            DottedIdentifier(
                                [
                                    "user",
                                    "role",
                                ],
                            ),
                            Eq,
                            String(
                                "admin",
                            ),
                        ),
                    ),
                    Action(
                        Allow,
                    ),
                ],
            },
        ),
    ],
}
