src/acl/snapshots/portail__acl__parser__tests__policy_with_redirect_action.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "allow_web_after_auth",
                attributes: [
                    Require(
                        And(
                            Comparison(
                                Identifier(
                                    "role",
                                ),
                                Eq,
                                String(
                                    "admin",
                                ),
                            ),
                            Not(
                                Comparison(
                                    Identifier(
                                        "banned",
                                    ),
                                    Eq,
                                    Boolean(
                                        true,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Action(
                        Redirect(
                            https://sso.example.com/login,
                        ),
                    ),
                ],
            },
        ),
    ],
}
