src/acl/snapshots/portail__acl__parser__tests__semantically_wrong_rules.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "weird_policy",
                attributes: [
                    Require(
                        Comparison(
                            Identifier(
                                "something_unknown",
                            ),
                            Eq,
                            Number(
                                42,
                            ),
                        ),
                    ),
                    Require(
                        Comparison(
                            DottedIdentifier(
                                [
                                    "user",
                                    "undefined_field",
                                ],
                            ),
                            Ne,
                            String(
                                "foo",
                            ),
                        ),
                    ),
                    Action(
                        Allow,
                    ),
                    Action(
                        Deny(
                            None,
                        ),
                    ),
                    Action(
                        Allow,
                    ),
                    Action(
                        Deny(
                            None,
                        ),
                    ),
                ],
            },
        ),
    ],
}
