src/acl/snapshots/portail__acl__parser__tests__simple_route_with_trailing_commas.snap
---
source: src/acl/parser.rs
expression: rules
---
ACLAst {
    entries: [
        Route(
            RouteDefinition {
                name: "main",
                attributes: [
                    Use(
                        [
                            "exit1",
                            "exit2",
                        ],
                    ),
                    When(
                        Comparison(
                            Identifier(
                                "src_ip",
                            ),
                            Eq,
                            String(
                                "1.2.3.4",
                            ),
                        ),
                    ),
                ],
            },
        ),
    ],
}
