src/acl/snapshots/portail__acl__parser__tests__valid_expression_precedence.snap
---
source: src/acl/parser.rs
expression: result.unwrap()
---
ACLAst {
    entries: [
        Policy(
            PolicyBlock {
                name: "complex_expr",
                attributes: [
                    When(
                        Or(
                            Or(
                                Comparison(
                                    Identifier(
                                        "a",
                                    ),
                                    Eq,
                                    Number(
                                        1,
                                    ),
                                ),
                                And(
                                    And(
                                        Not(
                                            Comparison(
                                                Identifier(
                                                    "b",
                                                ),
                                                Eq,
                                                Number(
                                                    2,
                                                ),
                                            ),
                                        ),
                                        Comparison(
                                            Identifier(
                                                "c",
                                            ),
                                            Eq,
                                            Number(
                                                3,
                                            ),
                                        ),
                                    ),
                                    Not(
                                        Comparison(
                                            Identifier(
                                                "d",
                                            ),
                                            Eq,
                                            Number(
                                                4,
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                            And(
                                Not(
                                    Comparison(
                                        Identifier(
                                            "e",
                                        ),
                                        Eq,
                                        Number(
                                            5,
                                        ),
                                    ),
                                ),
                                Comparison(
                                    Identifier(
                                        "f",
                                    ),
                                    Eq,
                                    Number(
                                        6,
                                    ),
                                ),
                            ),
                        ),
                    ),
                    Action(
                        Allow,
                    ),
                ],
            },
        ),
    ],
}
